--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/WEIRD.png" />
+    <meta name="google-site-verification" content="B5yXTpO_G0oBbCsIiyty1ssCWf6AB5KsMkF1WlbpKtQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEIRD FC</title>
   </head>
